--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,17 @@
 ---
 # vars file for Hadoop-DataNodes
+hadoop_dir: "/etc/hadoop"
+jdk: "jdk.rpm"
+DataNode_Dir: "/DataNode"
+NameNode_IP: 192.168.1.150
+NameNode_Port: 9000
+DataNodePorts:
+  - 50075
+  - 50475
+  - 50010
+  - 50020
+UtilitySoftwares:
+  - tar
+  - vim
+  - wget
+  - unzip
